clusters/k4/kubernetes/apps/default/echo/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: echo-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: echo
      app.kubernetes.io/instance: echo
  ingress:
    - fromCIDRSet:
        - cidrGroupRef: lan
      toPorts:
        - ports:
          - port: "80"
            protocol: TCP
